Update storage imports for new package