@@ -259,6 +259,7 @@
                 --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
                 --add-opens com.azure.storage.blob/com.azure.storage.blob=ALL-UNNAMED
                 --add-opens com.azure.storage.blob/com.azure.storage.blob.implementation=ALL-UNNAMED
+                --add-opens com.azure.storage.blob/com.azure.storage.blob.specialized=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
